After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725273 - Can't remove overview application folders; empty folders show up in overview and "add to" list
Can't remove overview application folders; empty folders show up in overview ...
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-26 20:17 UTC by Stephen
Modified: 2014-03-07 20:43 UTC
See Also:
GNOME target: 3.12
GNOME version: ---



Description Stephen 2014-02-26 20:17:52 UTC
To reproduce:

* select an application from Installed and add it to a new folder.
* select the same application and remove it from the folder.

An empty folder now appears in the overview, and the folder name has disappeared from the list of options for subsequent "* to Folder..." actions.

"Creating" the folder again with an identical name using the + button in the add/move to folder list then adding to it populates the previously empty folder.

Expected behaviour: removing the last item from a folder deletes the folder entirely (I assume this is what is intended?)

Using: GNOME 3.11.90 via Copr, upgraded from GNOME 3.10, under FC20.
Comment 1 Matthias Clasen 2014-02-27 04:12:18 UTC
It is gnome-shell's responsibility to not show empty folders.
Comment 2 Stephen 2014-02-27 10:53:22 UTC
Shouldn't empty folders be removed from dconf when they're emptied by an application (in this case gnome-software)? Stops the accumulation of cruft, and maintains a consistent mapping between visible/populated folders and dconf data, so emptying a folder mirrors/reverses the process of creating it.
Comment 3 Matthias Clasen 2014-02-27 10:55:54 UTC
We do remove them from the list of folders. Removing the folders themselves is not possible with the gsettings API, I'm afraid (which is one of the reasons for the existence of the separate folder list)