Only show non-empty folders in the shell

We should only add a folder to the folder-children list if it
is non-empty.
https://bugzilla.gnome.org/show_bug.cgi?id=725273